# serializer version: 1
# name: test_Compact_community
  SRModelDescriptor(
    architecture='RealESRGAN Compact',
    input_channels=3,
    output_channels=3,
    scale=2,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '16nc',
    ]),
  )
# ---
# name: test_Compact_realesr_general_x4v3
  SRModelDescriptor(
    architecture='RealESRGAN Compact',
    input_channels=3,
    output_channels=3,
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '32nc',
    ]),
  )
# ---
